Compiler/tests/bad/function10.nx

function somar(x : int, y : int) : int
{
    function teste(x : int, y : int) : int
    {
        return 2;
    }

    return 1;
}
